change db provider to sqlite, code cleanup

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "CoffeeContext": "Server=localhost;User id=SA;Password=Krokodilaz1;Database=TestDB;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=false;"
+    "CoffeeContext": "Server=localhost;Database=CoffeeContext;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=false;"
   }
 }
